--- a/ProjectSteps/p3.database.testing/python/timepackage/mysqlconnector/MySQLTime.ipynb
+++ b/ProjectSteps/p3.database.testing/python/timepackage/mysqlconnector/MySQLTime.ipynb
@@ -33,7 +33,7 @@
     "mydb = mysql.connector.connect(\n",
     "  host=\"localhost\",\n",
     "  user=\"admin\",\n",
-    "  password=\"Pacho1414+++\",\n",
+    "  password=\"password",\n",
     "  database=\"housing\"\n",
     ")\n",
     "\n",
