--- a/ProjectSteps/p3.database.testing/python/timepackage/pymongo/PyMongoTime.ipynb
+++ b/ProjectSteps/p3.database.testing/python/timepackage/pymongo/PyMongoTime.ipynb
@@ -53,7 +53,7 @@
     "import ssl\n",
     "\n",
     "# Set up the MongoDB client\n",
-    "uri = \"mongodb+srv://juangui37:Pacho1414@cluster0.eobads9.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "uri = \"(<MongoDBString>)"\n",
     "client = MongoClient(uri, server_api=ServerApi('1'), tls=True, tlsAllowInvalidCertificates=True)\n",
     "db = client.get_database('housing')\n",
     "propertyinfo = db.get_collection('propertyinfo')\n",
