--- a/ProjectSteps/p4.eda.on.db/dataexploration/PyMongo/PyMongo EDA.ipynb
+++ b/ProjectSteps/p4.eda.on.db/dataexploration/PyMongo/PyMongo EDA.ipynb
@@ -18,7 +18,7 @@
     "from pymongo.server_api import ServerApi\n",
     "import ssl\n",
     "\n",
-    "uri = \"mongodb+srv://juangui37:Pacho1414@cluster0.eobads9.mongodb.net/?retryWrites=true&w=majority\"\n",
+    "uri = \"(<MongoDBString>n",
     "\n",
     "# Create a new client and connect to the server\n",
     "client = MongoClient(uri, server_api=ServerApi('1'), tls=True,\n",
